# eps-vpc-resources

./: .gitallowed  .gitignore  .pre-commit-config.yaml  .tool-versions  .trivyignore.yaml  Gemfile  Makefile  README.md  _config.yml  cdk.json  dev.html  eslint.config.mjs  jest.default.config.ts  package-lock.json  package.json  pyproject.toml  qa.html  sonar-project.properties  tsconfig.build.json  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/chatmodes/: create_instructions.chatmode.md
.github/instructions/: instructions.intstructions.md
.github/scripts/: call_mark_jira_released.sh  (+7 more)
_data/: dev_deployments.csv  dev_latest.csv  dev_vpc-resources_eu-west-2_deployments.csv  dev_vpc-resources_eu-west-2_latest.csv  envrionments.csv  int_deployments.csv  int_latest.csv  int_vpc-resources_eu-west-2_deployments.csv  int_vpc-resources_eu-west-2_latest.csv  prod_deployments.csv  prod_latest.csv  prod_vpc-resources_eu-west-2_deployments.csv  prod_vpc-resources_eu-west-2_latest.csv  qa_deployments.csv  qa_latest.csv  qa_vpc-resources_eu-west-2_deployments.csv  qa_vpc-resources_eu-west-2_latest.csv  recovery_deployments.csv  recovery_latest.csv  ref_deployments.csv  ref_latest.csv  ref_vpc-resources_eu-west-2_deployments.csv  ref_vpc-resources_eu-west-2_latest.csv
_includes/: full_deployment_history.html
release_notes/: v1.0.48-beta.md  v1.0.49-beta.md  v1.0.50-beta.md  v1.0.51-beta.md  v1.0.52-beta.md  v1.0.53-beta.md  v1.0.54-beta.md  v1.0.55-beta.md  v1.0.56-beta.md  v1.0.57-beta.md  v1.0.58-beta.md
(+21 files in other folders)
